<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SigninFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_marginTop="50dp"
                android:src="@drawable/logo"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:padding="10dp"
                android:ems="10"
                android:background="@drawable/edit_background"
                android:id="@+id/txtEmail"
                android:textSize="@dimen/fs_18"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:paddingLeft="4dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pwd"
                android:padding="10dp"
                android:ems="10"
                android:background="@drawable/edit_background"
                android:id="@+id/txtPassword"
                android:textSize="@dimen/fs_18"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:paddingLeft="4dp" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/btnLogin"
                android:layout_marginTop="50dp"
                android:textAllCaps="false"
                android:background="@drawable/button_background"
                android:textSize="@dimen/fs_18"
                android:textColor="@color/fcWhite"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/no_account"
                android:id="@+id/textView"
                android:layout_marginTop="30dp"
                android:textIsSelectable="false"
                android:textSize="@dimen/fs_16" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/signup"
                android:textColor="@color/fcBlue"
                android:id="@+id/btnSignUp"
                android:layout_marginTop="10dp"
                android:textIsSelectable="false"
                android:textSize="@dimen/fs_18" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>