<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment"
    android:gravity="center_horizontal"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView4" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/home_description"
                    android:id="@+id/textView"
                    android:textSize="@dimen/fs_20"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView6"
                    android:src="@drawable/logo"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:layout_marginTop="15dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:hint="@string/home_edit_placeholder"
                    android:padding="10dp"
                    android:ems="10"
                    android:id="@+id/txtURL"
                    android:textSize="@dimen/fs_16"
                    android:layout_marginBottom="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/edit_background"
                    android:layout_marginTop="30dp" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_btn_save"
                    android:id="@+id/btnSave"
                    android:layout_marginTop="30dp"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:textSize="@dimen/fs_18"
                    android:textColor="@color/fcWhite"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_btn_recent"
                    android:id="@+id/btnRecent"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:textSize="@dimen/fs_18"
                    android:textColor="@color/fcWhite"
                    android:textStyle="bold" />

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_btn_first"
                    android:id="@+id/btnFirst"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="false"
                    android:background="@drawable/button_background"
                    android:textSize="@dimen/fs_18"
                    android:textColor="@color/fcWhite"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btnOverview"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/button_background"
                    android:text="@string/home_btn_overview"
                    android:textAllCaps="false"
                    android:textColor="@color/fcWhite"
                    android:textSize="@dimen/fs_18"
                    android:textStyle="bold"
                    android:visibility="invisible" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</FrameLayout>